Fixes for selected padding, grid misalignment, removed unneeded code

--- a/modules/openy_features/openy_media/css/browser.css
+++ b/modules/openy_features/openy_media/css/browser.css
@@ -29,11 +29,9 @@ nav.eb-tabs ul li.active a {
   margin: 2em 0;
 }
 .view.eb-media .views-col {
+  float: left;
   height: 100%;
   text-align: center;
-}
-.view.eb-media .views-col.selected {
-  box-shadow: 0 0 20px #0089d0;
 }
 .view.eb-media .views-col .views-field {
   padding: 2px;
@@ -61,4 +59,10 @@ nav.eb-tabs ul li.active a {
 .view.view-videos-library .media {
   background-color: #efefef;
   padding: 10px;
+}
+
+.view.view-images-library .views-col.selected img,
+.view.view-documents-library .views-col.selected .media,
+.view.view-videos-library .views-col.selected .media {
+  box-shadow: 0 0 10px #0089d0;
 }
